--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
   get: ^4.7.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
