--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cloud_firestore: ^5.6.5
   get: ^4.7.2
   intl: ^0.20.2
+  icons_launcher: ^3.0.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
